Fix for REGALG & TVRRUN - Broken transcript. (#627)